Standardize vendor prefixes in the CSS

--- a/symphony/assets/css/devkit.css
+++ b/symphony/assets/css/devkit.css
@@ -9,9 +9,9 @@
 
 * {
 	border: none;
-	-ms-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
 	box-sizing: border-box;
 	color: inherit;
 	font: inherit;
@@ -58,8 +58,9 @@ a:hover {
 
 #header,
 #header * {
-	-moz-user-select: none;
 	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
 }
 
 #header h1 {
