--- a/symphony/assets/css/symphony.grids.css
+++ b/symphony/assets/css/symphony.grids.css
@@ -24,8 +24,6 @@
 .columns > .invalid {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	-o-box-sizing: border-box;
 	box-sizing: border-box;
 	float: left;
 	padding: 0 0 0 15px;
@@ -103,6 +101,7 @@ form.columns .column.primary {
 	background: none;
 	border: none;
 	border-radius: 0;
+	-webkit-box-shadow: none;
 	box-shadow: none;
 }
 
@@ -122,6 +121,7 @@ form.columns .column.primary {
 	border: 1px solid #c31;
 	border-top: 0;
 	border-radius: 0 0 4px 4px;
+	webkit-box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
 	box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
 	padding: 0 10px 10px;
 }
