Vendor prefixes in Devkit's

--- a/symphony/assets/css/devkit.css
+++ b/symphony/assets/css/devkit.css
@@ -11,7 +11,6 @@
 	border: none;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
 	box-sizing: border-box;
 	color: inherit;
 	font: inherit;
@@ -60,6 +59,8 @@ a:hover {
 #header * {
 	-webkit-user-select: none;
 	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
 	user-select: none;
 }
 
