Apply .disabled styles to the Duplicator constructor. RE: #1229

--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -526,9 +526,7 @@ span.frame {
 /* Destructor */
 
 .frame > ol > li header .destructor,
-.frame > ul > li header .destructor,
-.frame > ol > li header .button,
-.frame > ul > li header .button {
+.frame > ul > li header .destructor {
 	position: absolute;
 	top: 0.65em;
 	right: 10px;
@@ -540,17 +538,17 @@ span.frame {
 
 .frame > ol > li header .destructor:hover,
 .frame > ul > li header .destructor:hover,
-.frame > ol > li header .button:hover,
-.frame > ul > li header .button:hover {
+.frame > ol + fieldset .constructor:hover,
+.frame > ol + fieldset .constructor:hover {
 	color: rgba(0, 0, 0, 0.7);
 }
 
 .frame > ol > li header .destructor.disabled,
 .frame > ul > li header .destructor.disabled,
-.frame > ol > li header .button.disabled,
-.frame > ul > li header .button.disabled {
+.frame > ol + fieldset .constructor.disabled,
+.frame > ol + fieldset .constructor.disabled {
 	color: rgba(0, 0, 0, 0.2);
-	cursor: default;
+	cursor: not-allowed;
 	opacity: 0.4;
 }
 
