Add a little extra spacing for the .secondary column when the 700px media query kicks in. Fixes #1231

--- a/symphony/assets/css/symphony.grids.css
+++ b/symphony/assets/css/symphony.grids.css
@@ -78,21 +78,20 @@ form.columns .column.primary {
 }
 
 @media screen and (max-width: 700px) {
-
 	.two.columns .column.primary,
 	.two.columns .column.secondary {
 		width: 100%;
 	}
 
 	.two.columns .column.secondary {
-		padding: 0;
+		padding: 20px 0 0 0;
+		margin-top: 15px;
 		border-top: 1px solid rgba(0, 0, 0, 0.1);
 	}
 
 	.two.columns .column.secondary p.label {
 		margin-top: 10px;
 	}
-
 }
 
 /* Errors in columns */
