--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -337,8 +337,8 @@ fieldset.settings fieldset {
 }
 fieldset.settings fieldset legend {
 	display: inline;
-	margin: 0 0 0 -0.5em;
-	padding: 0 0.75em 0 0.5em;
+	margin: 0;
+	padding: 0;
 	font-weight: normal;
 	line-height: 1.5;
 	text-indent: 0;
