--- a/symphony/assets/css/symphony.forms.css
+++ b/symphony/assets/css/symphony.forms.css
@@ -160,7 +160,12 @@ button:focus,
 input[type=submit].selected,
 button.selected,
 .button.selected {
-	box-shadow: inset 2px 2px 7px rgba(0, 0, 0, 0.1), inset 1px 1px 2px rgba(0, 0, 0, 0.15), inset -2px -2px 2px rgba(255, 255, 255, 0.85);
+	background-image: -webkit-linear-gradient(bottom, #EFEFED 0%, #EFEFED 30%, #E3E3DF 100%);
+	background-image:    -moz-linear-gradient(bottom, #EFEFED 0%, #EFEFED 30%, #E3E3DF 100%);
+	background-image:     -ms-linear-gradient(bottom, #EFEFED 0%, #EFEFED 30%, #E3E3DF 100%);
+	background-image:      -o-linear-gradient(bottom, #EFEFED 0%, #EFEFED 30%, #E3E3DF 100%);
+	background-image:         linear-gradient(bottom, #EFEFED 0%, #EFEFED 30%, #E3E3DF 100%);
+	box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
 	cursor: pointer;
 	color: rgba(0, 0, 0, 0.65);
 	border-color: rgba(0, 0, 0, 0.3);
