--- a/symphony/assets/css/symphony.grids.css
+++ b/symphony/assets/css/symphony.grids.css
@@ -122,7 +122,7 @@ form.columns .column.primary {
 	border: 1px solid #c31;
 	border-top: 0;
 	border-radius: 0 0 4px 4px;
-	webkit-box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
+	-webkit-box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
 	box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
 	padding: 0 10px 10px;
 }
