Add version information to the Extensions page. Closes #1214

--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -614,3 +614,9 @@ div.field-checkbox:first-child {
 	float: left;
 	margin-left: 0;
 }
+
+#version {
+	color: #9E9E9E;
+	margin: 33px 0 0 19px;
+	float: left;
+}
