Fix error when saving utilities or templates that included encoded entities. Apply zebra striping to utilities list. Fixes #1279

--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -249,6 +249,11 @@ span.frame {
 	display: inline-block;
 }
 
+.frame > ol > li:nth-child(2n),
+.frame > ul > li:nth-child(2n) {
+	background: #FFF;
+}
+
 /* Header */
 
 .frame > ol > li header,
