Only apply zebra styling to the Utilities instead of all frames. Fixes #1283

--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -616,8 +616,16 @@ div.field-checkbox:first-child {
 	margin-left: 0;
 }
 
-#version {
-	color: #9E9E9E;
-	margin: 33px 0 0 19px;
-	float: left;
-}
+/*--------------------------------------------------------------------
+	Misc
+--------------------------------------------------------------------*/
+
+	#utilities > li:nth-child(2n) {
+		background: #FFF;
+	}
+
+	#version {
+		color: #9E9E9E;
+		margin: 33px 0 0 19px;
+		float: left;
+	}
