Testing: removing shadows, partly switching from RGBA to HEX

--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -43,8 +43,8 @@ fieldset.frame,
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	padding: 10px;
 	background-color: #f5f5f5;
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+/*	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);*/
 	border-radius: 4px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -67,8 +67,8 @@ span.frame {
 	padding: 10px;
 	background-color: #f5f5f3;
 	text-align: left;
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+/*	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);*/
 	border-radius: 4px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -113,8 +113,8 @@ span.frame {
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	background-color: #f5f5f3;
 	text-align: left;
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+/*	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);*/
 	border-radius: 4px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -197,8 +197,8 @@ span.frame {
 	background: #f5f5f5;
 	float: left;
 	width: 100%;
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+/*	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);*/
 	border-radius: 4px;
 	min-height: 30px;
 	-webkit-box-sizing: border-box;
@@ -221,8 +221,8 @@ span.frame {
 	float: left;
 	clear: both;
 	width: 100%;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	border-top-color: rgba(0, 0, 0, 0.25);
+	border: 1px solid #b8b8b8;
+	border-top-color: #c4c4c4;
 	border-bottom: none;
 	min-height: 31px;
 }
@@ -231,14 +231,14 @@ span.frame {
 .frame > ul > li:first-of-type {
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
-	border-top: 1px solid rgba(0, 0, 0, 0.2);
+	border-top: 1px solid #b8b8b8;
 }
 
 .frame > ol > li:last-of-type,
 .frame > ul > li:last-of-type {
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+	border-bottom: 1px solid #b8b8b8;
 }
 
 /* Link lists */
@@ -254,12 +254,12 @@ span.frame {
 .frame > ol > li header,
 .frame > ul > li header {
 	position: relative;
-	color: rgba(0, 0, 0, 0.75);
+	color: #3d3d3d;
 	margin: 0 -10px;
 	padding: 8px 10px 7px;
-	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
-	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+/*	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);*/
+	border-bottom: 1px solid #dcdcdc;
 }
 
 .frame.orderable > ol > li header,
@@ -274,24 +274,23 @@ span.frame {
 
 .frame.collapsible > ol > li header,
 .frame.collapsible > ul > li header {
-	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
-	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
-	border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+/*	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);*/
+	border-bottom: 1px solid #d0d0d0;
 }
 
 .frame > ol > li.collapsed header,
 .frame > ul > li.collapsed header {
-	-webkit-box-shadow: none;
-	box-shadow: none;
+/*	-webkit-box-shadow: none;
+	box-shadow: none;*/
 	border-bottom-color: transparent;
 }
 
 .frame > ol > li.expanding header,
 .frame > ul > li.expanding header {
-	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
-	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
-	border-bottom: 1px solid rgba(255, 255, 255, 0.75);
-	border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+/*	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);*/
+	border-bottom: 1px solid #d0d0d0;
 }
 
 .frame > ol > li header h4,
@@ -304,7 +303,7 @@ span.frame {
 .frame > ul > li header span {
 	margin: 0 0 0 10px;
 	font-weight: normal;
-	color: rgba(0, 0, 0, 0.5);
+	color: #a1a1a1;
 }
 
 .frame > ol > li header.main:before,
@@ -317,14 +316,14 @@ span.frame {
 	height: 10px;
 	float: left;
 	margin: 3px 7px 0 0;
-	border-left: 6px solid rgba(0, 0, 0, 0.25);
-	border-right: 3px solid rgba(0, 0, 0, 0.1);
+	border-left: 6px solid #b8b8b8;
+	border-right: 3px solid #dcdcdc;
 }
 
 .frame > ol > li header.sidebar:before,
 .frame > ul > li header.sidebar:before {
-	border-left: 6px solid rgba(0, 0, 0, 0.1);
-	border-right: 3px solid rgba(0, 0, 0, 0.25);
+	border-left: 6px solid #dcdcdc;
+	border-right: 3px solid #b8b8b8;
 }
 
 .frame > ol > li.highlight header:before,
@@ -416,11 +415,11 @@ span.frame {
 .frame > ul > li.selected,
 .frame > ul > li.ordering {
 	background-color: #668abe;
-	background-image: -webkit-linear-gradient(top, #668abe, #5c83ba);
+/*	background-image: -webkit-linear-gradient(top, #668abe, #5c83ba);
 	background-image:    -moz-linear-gradient(top, #668abe, #5c83ba);
 	background-image:     -ms-linear-gradient(top, #668abe, #5c83ba);
 	background-image:      -o-linear-gradient(top, #668abe, #5c83ba);
-	background-image:   linear-gradient(to bottom, #668abe, #5c83ba);
+	background-image:   linear-gradient(to bottom, #668abe, #5c83ba);*/
 	border-top: 1px solid #4D78B4;
 	border-bottom: 1px solid #4D78B4;
 	text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
@@ -450,8 +449,8 @@ span.frame {
 .frame > ol > li.ordering header,
 .frame > ul > li.ordering header {
 	color: #fff;
-	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
-	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
+/*	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);*/
 	cursor: move;
 }
 
@@ -486,8 +485,8 @@ span.frame {
 .frame > ol > li.ordering .content textarea,
 .frame > ul > li.ordering .content input,
 .frame > ul > li.ordering .content textarea {
-	-webkit-box-shadow: 0 0 0 1px #4D78B4;
-	box-shadow: 0 0 0 1px #4D78B4;
+/*	-webkit-box-shadow: 0 0 0 1px #4D78B4;
+	box-shadow: 0 0 0 1px #4D78B4;*/
 }
 
 .frame > ol > li.ordering .content fieldset,
@@ -521,7 +520,7 @@ span.frame {
 	position: absolute;
 	top: 8px;
 	right: 10px;
-	color: rgba(0, 0, 0, 0.3);
+	color: #aeaeae;
 	border-bottom: none;
 	font-weight: normal;
 	margin: 0;
@@ -594,8 +593,8 @@ span.frame {
 	display: block;
 	color: #fff;
 	border-radius: 4px;
-	-webkit-box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
-	box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
+/*	-webkit-box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
+	box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);*/
 }
 
 .invalid p {
