--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -197,8 +197,8 @@ span.frame {
 	background: #f5f5f5;
 	float: left;
 	width: 100%;
-/*	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);*/
+	-webkit-box-shadow: 0 1px 2px #e5e5e5;
+	box-shadow: 0 1px 2px #e5e5e5;
 	border-radius: 4px;
 	min-height: 30px;
 	-webkit-box-sizing: border-box;
@@ -257,8 +257,8 @@ span.frame {
 	color: #3d3d3d;
 	margin: 0 -10px;
 	padding: 8px 10px 7px;
-/*	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
-	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);*/
+	-webkit-box-shadow: 0 3px 10px #ebebeb;
+	box-shadow: 0 3px 10px #ebebeb;
 	border-bottom: 1px solid #dcdcdc;
 }
 
@@ -274,22 +274,22 @@ span.frame {
 
 .frame.collapsible > ol > li header,
 .frame.collapsible > ul > li header {
-/*	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
-	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);*/
+	-webkit-box-shadow: 0 3px 10px #dcdcdc;
+	box-shadow: 0 3px 10px #dcdcdc;
 	border-bottom: 1px solid #d0d0d0;
 }
 
 .frame > ol > li.collapsed header,
 .frame > ul > li.collapsed header {
-/*	-webkit-box-shadow: none;
-	box-shadow: none;*/
+	-webkit-box-shadow: none;
+	box-shadow: none;
 	border-bottom-color: transparent;
 }
 
 .frame > ol > li.expanding header,
 .frame > ul > li.expanding header {
-/*	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
-	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);*/
+	-webkit-box-shadow: 0 3px 10px #dcdcdc;
+	box-shadow: 0 3px 10px #dcdcdc;
 	border-bottom: 1px solid #d0d0d0;
 }
 
