--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -40,11 +40,11 @@ fieldset.frame,
 .frame.inline {
 	display: block;
 	margin-bottom: 15px;
-	border: 1px solid rgba(0, 0, 0, 0.2);
+	border: 1px solid #b8b8b8;
 	padding: 10px;
 	background-color: #f5f5f5;
-/*	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);*/
+	-webkit-box-shadow: 0 1px 2px #e5e5e5;
+	box-shadow: 0 1px 2px #e5e5e5;
 	border-radius: 4px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -63,12 +63,12 @@ span.frame {
 	width: 280px;
 	margin: 100px auto;
 	overflow: visible;
-	border: 1px solid rgba(0, 0, 0, 0.2);
+	border: 1px solid #b8b8b8;
 	padding: 10px;
 	background-color: #f5f5f3;
 	text-align: left;
-/*	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);*/
+	-webkit-box-shadow: 0 1px 2px #e5e5e5;
+	box-shadow: 0 1px 2px #e5e5e5;
 	border-radius: 4px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -110,11 +110,11 @@ span.frame {
 }
 
 #error .frame {
-	border: 1px solid rgba(0, 0, 0, 0.2);
+	border: 1px solid #b8b8b8; 
 	background-color: #f5f5f3;
 	text-align: left;
-/*	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);*/
+	-webkit-box-shadow: 0 1px 2px #e5e5e5;
+	box-shadow: 0 1px 2px #e5e5e5;
 	border-radius: 4px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -209,7 +209,7 @@ span.frame {
 
 .frame.empty > ol,
 .frame.empty > ul {
-	border: 1px dashed rgba(0, 0, 0, 0.2);
+	border: 1px dashed #b8b8b8;
 }
 
 .frame > ol > li,
@@ -257,8 +257,8 @@ span.frame {
 	color: #3d3d3d;
 	margin: 0 -10px;
 	padding: 8px 10px 7px;
-	-webkit-box-shadow: 0 3px 10px #ebebeb;
-	box-shadow: 0 3px 10px #ebebeb;
+	-webkit-box-shadow: 0 3px 10px #ededed;
+	box-shadow: 0 3px 10px #ededed;
 	border-bottom: 1px solid #dcdcdc;
 }
 
@@ -270,26 +270,18 @@ span.frame {
 .frame.collapsible > ol > li header,
 .frame.collapsible > ul > li header {
 	cursor: pointer;
-}
-
-.frame.collapsible > ol > li header,
-.frame.collapsible > ul > li header {
-	-webkit-box-shadow: 0 3px 10px #dcdcdc;
-	box-shadow: 0 3px 10px #dcdcdc;
 	border-bottom: 1px solid #d0d0d0;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 .frame > ol > li.collapsed header,
 .frame > ul > li.collapsed header {
-	-webkit-box-shadow: none;
-	box-shadow: none;
 	border-bottom-color: transparent;
 }
 
 .frame > ol > li.expanding header,
 .frame > ul > li.expanding header {
-	-webkit-box-shadow: 0 3px 10px #dcdcdc;
-	box-shadow: 0 3px 10px #dcdcdc;
 	border-bottom: 1px solid #d0d0d0;
 }
 
@@ -328,14 +320,14 @@ span.frame {
 
 .frame > ol > li.highlight header:before,
 .frame > ul > li.highlight header:before {
-	border-left: 6px solid rgba(0, 0, 0, 0.5);
-	border-right: 3px solid rgba(0, 0, 0, 0.2);
+	border-left: 6px solid #747474;
+	border-right: 3px solid #b9b9b9;
 }
 
 .frame > ol > li.highlight header.sidebar:before,
 .frame > ul > li.highlight header.sidebar:before {
-	border-left: 6px solid rgba(0, 0, 0, 0.2);
-	border-right: 3px solid rgba(0, 0, 0, 0.5);
+	border-left: 6px solid #b9b9b9;
+	border-right: 3px solid #747474;
 }
 
 /* Errors */
@@ -349,6 +341,24 @@ span.frame {
 .frame > ul > li.conflict.ordering header {
 	background: none;
 }
+
+.frame > ol > li.conflict.collapsed header span,
+.frame > ol > li.conflict.collapsed header .destructor {
+	color: #BD7053;
+}
+
+.frame > ol > li.conflict.collapsed header:before,
+.frame > ul > li.conflict.collapsed header:before {
+	border-left: 6px solid #BD7053;
+	border-right: 3px solid #E7A973;
+}
+
+.frame > ol > li.conflict.collapsed header.sidebar:before,
+.frame > ul > li.conflict.collapsed header.sidebar:before {
+	border-left: 6px solid #E7A973;
+	border-right: 3px solid #BD7053;
+}
+
 
 /* Content: light scheme */
 
@@ -374,7 +384,7 @@ span.frame {
 }
 
 .frame.collapsible .content fieldset {
-	border-top-color: rgba(0, 0, 0, 0.15);
+	border-top-color: #d0d0d0;
 }
 
 .frame.collapsible > ol > li legend,
@@ -400,12 +410,12 @@ span.frame {
 .frame.dark > ol > li ul.tags,
 .frame.dark > ul > li .content i,
 .frame.dark > ul > li ul.tags {
-	color: rgba(255, 255, 255, 0.3);
+	color: #6f6f6e;
 }
 
 .frame.dark > ol > li .content fieldset,
 .frame.dark > ul > li .content fieldset {
-	border-top-color: rgba(255, 255, 255, 0.1);
+	border-top-color: #464644;
 }
 
 /* Selecting & ordering */
@@ -415,11 +425,6 @@ span.frame {
 .frame > ul > li.selected,
 .frame > ul > li.ordering {
 	background-color: #668abe;
-/*	background-image: -webkit-linear-gradient(top, #668abe, #5c83ba);
-	background-image:    -moz-linear-gradient(top, #668abe, #5c83ba);
-	background-image:     -ms-linear-gradient(top, #668abe, #5c83ba);
-	background-image:      -o-linear-gradient(top, #668abe, #5c83ba);
-	background-image:   linear-gradient(to bottom, #668abe, #5c83ba);*/
 	border-top: 1px solid #4D78B4;
 	border-bottom: 1px solid #4D78B4;
 	text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
@@ -449,9 +454,14 @@ span.frame {
 .frame > ol > li.ordering header,
 .frame > ul > li.ordering header {
 	color: #fff;
-/*	-webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);
-	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.075);*/
+	background: #5c83ba;
+	border-bottom-color: #7093c3;
 	cursor: move;
+}
+
+.frame > ol > li.collapsed.ordering header,
+.frame > ul > li.collapsed.ordering header {
+	border-bottom-color: none;
 }
 
 .frame > ol > li.ordering header span,
@@ -462,7 +472,7 @@ span.frame {
 .frame > ul > li.ordering header .destructor,
 .frame > ul > li.ordering .content i,
 .frame > ul > li.ordering ul.tags {
-	color: rgba(255, 255, 255, 0.6);
+	color: #bdcbdd;
 }
 
 .frame > ol > li.ordering .content,
@@ -485,13 +495,12 @@ span.frame {
 .frame > ol > li.ordering .content textarea,
 .frame > ul > li.ordering .content input,
 .frame > ul > li.ordering .content textarea {
-/*	-webkit-box-shadow: 0 0 0 1px #4D78B4;
-	box-shadow: 0 0 0 1px #4D78B4;*/
+	border-color: #4b76b1;
 }
 
 .frame > ol > li.ordering .content fieldset,
 .frame > ul > li.ordering .content fieldset {
-	border-top-color: rgba(255, 255, 255, 0.2);
+	border-top-color: #7093c3;
 }
 
 .frame > ol > li.highlight,
@@ -501,14 +510,14 @@ span.frame {
 
 .frame > ol > li.ordering header:before,
 .frame > ul > li.ordering header:before {
-	border-left: 6px solid rgba(255, 255, 255, 0.7);
-	border-right: 3px solid rgba(255, 255, 255, 0.2);
+	border-left: 6px solid #cedaea;
+	border-right: 3px solid #7c9bc7;
 }
 
 .frame > ol > li.ordering header.sidebar:before,
 .frame > ul > li.ordering header.sidebar:before {
-	border-left: 6px solid rgba(255, 255, 255, 0.2);
-	border-right: 3px solid rgba(255, 255, 255, 0.7);
+	border-left: 6px solid #7c9bc7;
+	border-right: 3px solid #cedaea;
 }
 
 /* Destructor */
@@ -532,7 +541,7 @@ span.frame {
 .frame > ul > li header .button:hover,
 .frame > ol + fieldset .constructor:hover,
 .frame > ol + fieldset .constructor:hover {
-	color: rgba(0, 0, 0, 0.7);
+	color: #494949;
 }
 
 .frame > ol > li header .destructor.disabled,
@@ -541,7 +550,7 @@ span.frame {
 .frame > ul > li header .button.disabled,
 .frame > ol + fieldset .constructor.disabled,
 .frame > ol + fieldset .constructor.disabled {
-	color: rgba(0, 0, 0, 0.2);
+	color: #adadad;
 	cursor: not-allowed;
 	opacity: 0.4;
 }
@@ -593,8 +602,6 @@ span.frame {
 	display: block;
 	color: #fff;
 	border-radius: 4px;
-/*	-webkit-box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
-	box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);*/
 }
 
 .invalid p {
