Set bottom border colour when ordering collapsed Duplicator instances

--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -462,7 +462,7 @@ span.frame {
 
 .frame > ol > li.collapsed.ordering header,
 .frame > ul > li.collapsed.ordering header {
-	border-bottom-color: none;
+	border-bottom-color: #5c83ba;
 }
 
 .frame > ol > li.ordering header span,
