--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -391,6 +391,7 @@ span.frame {
 .frame.collapsible > ol > li legend,
 .frame.collapsible > ul > li legend {
 	background: #e8e8e8;
+	padding-right: 5px;
 }
 
 /* Content: dark scheme */
