--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -146,6 +146,8 @@
 	text-shadow: none;
 	border: 1px solid rgba(187, 187, 187, 0.5);
 	border-top: none;
+	-webkit-border-bottom-right-radius: 4px;
+	-webkit-border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	border-bottom-left-radius: 4px;
 }
@@ -176,6 +178,8 @@
 }
 
 #nav ul ul li:last-child a {
+	-webkit-border-bottom-right-radius: 3px;
+	-webkit-border-bottom-left-radius: 3px;
 	border-bottom-right-radius: 3px;
 	border-bottom-left-radius: 3px;
 }
@@ -412,6 +416,7 @@ div.password {
 	left: 0;
 	width: 100%;
 	padding: 0 0 0 275px;
+	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	z-index: 1000;
@@ -475,6 +480,7 @@ ul.page form {
 	border: 1px solid transparent;
 	padding: 0;
 	min-height: 20px;
+	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	border-radius: 4px;
@@ -487,12 +493,14 @@ ul.page:hover form {
 ul.page form:hover,
 ul.page form.active {
 	border-color: rgba(0, 0, 0, 0.4);
+	-webkit-box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 	box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 }
 
 ul.page form.invalid {
 	background-color: #fff9a2;
 	border-color: rgba(0, 0, 0, 0.4);
+	-webkit-box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 	box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 }
 
@@ -507,8 +515,10 @@ ul.page input {
 	outline: none;
 	line-height: 1;
 	color: #666;
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	padding: 0;
+	-webkit-box-shadow: none;
 	box-shadow: none;
 	font-size: 1em;
 	margin: 0;
@@ -542,8 +552,6 @@ ul.page form span {
 	margin-bottom: 15px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	-o-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
