--- a/symphony/assets/css/symphony.forms.css
+++ b/symphony/assets/css/symphony.forms.css
@@ -17,10 +17,12 @@ textarea,
 select[multiple] {
 	padding: 2px 3px;
 	border: 1px solid rgba(0, 0, 0, 0.25);
+	-webkit-box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.05);
 	box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.05);
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	-webkit-border-radius: 2px;
 	border-radius: 2px;
 	margin-top: 2px;
 	width: 100%;
@@ -135,6 +137,7 @@ button,
 	background-image: linear-gradient(to bottom, #fbfbfa 0%, #fbfbfa 30%, #e3e3df 100%);
 	border: 1px solid rgba(0, 0, 0, 0.25);
 	border-bottom-color: rgba(0, 0, 0, 0.3);
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
@@ -165,6 +168,7 @@ button.selected,
 	background-image:     -ms-linear-gradient(bottom, #EFEFED 0%, #EFEFED 30%, #E3E3DF 100%);
 	background-image:      -o-linear-gradient(bottom, #EFEFED 0%, #EFEFED 30%, #E3E3DF 100%);
 	background-image:         linear-gradient(bottom, #EFEFED 0%, #EFEFED 30%, #E3E3DF 100%);
+	-webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
 	box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
 	cursor: pointer;
 	color: rgba(0, 0, 0, 0.65);
@@ -230,7 +234,9 @@ fieldset.apply,
 fieldset.apply.inactive:hover {
 	background: #fbfbfa;
 	border: 1px solid rgba(0, 0, 0, 0.25);
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
+	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
 	display: block;
 	float: right;
@@ -275,6 +281,7 @@ fieldset.apply select {
 	/* DavidOliver's note: start: causing outline when selected: */
 	background: transparent;
 	border: none;
+	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	/* DavidOliver's note: end: causing outline when selected: */
 	color: rgb(60, 60, 60);
@@ -300,6 +307,7 @@ fieldset.apply button {
 	margin: 0;
 	border: none;
 	border-left: 1px solid rgba(0, 0, 0, 0.15);
+	-webkit-border-radius: 0 4px 4px 0;
 	border-radius: 0 4px 4px 0;
 	line-height: 1.85;
 	height: 1.85em;
@@ -332,6 +340,7 @@ fieldset.apply.single select {
 fieldset.apply.single button {
 	border: 1px solid rgba(0, 0, 0, 0.25);
 	border-bottom-color: rgba(0, 0, 0, 0.3);
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	height: auto;
 	white-space: nowrap;
