--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -22,6 +22,7 @@
 	color: #fff;
 	margin: -11px -11px 15px;
 	padding: 18px 11px;
+	-webkit-border-radius: 4px 4px 0 0;
 	border-radius: 4px 4px 0 0;
 	line-height: 1.5;
 }
@@ -45,6 +46,7 @@ fieldset.frame,
 	background-color: #f5f5f5;
 	-webkit-box-shadow: 0 1px 2px #e5e5e5;
 	box-shadow: 0 1px 2px #e5e5e5;
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -69,6 +71,7 @@ span.frame {
 	text-align: left;
 	-webkit-box-shadow: 0 1px 2px #e5e5e5;
 	box-shadow: 0 1px 2px #e5e5e5;
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -115,6 +118,7 @@ span.frame {
 	text-align: left;
 	-webkit-box-shadow: 0 1px 2px #e5e5e5;
 	box-shadow: 0 1px 2px #e5e5e5;
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -183,6 +187,7 @@ span.frame {
 }
 
 #fatalerror .frame .content:last-of-type ul {
+	-webkit-border-radius: 0 0 4px 4px;
 	border-radius: 0 0 4px 4px;
 }
 
@@ -199,6 +204,7 @@ span.frame {
 	width: 100%;
 	-webkit-box-shadow: 0 1px 2px #e5e5e5;
 	box-shadow: 0 1px 2px #e5e5e5;
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 	min-height: 30px;
 	-webkit-box-sizing: border-box;
@@ -229,6 +235,8 @@ span.frame {
 
 .frame > ol > li:first-of-type,
 .frame > ul > li:first-of-type {
+	-webkit-border-bottom-left-radius: 4px;
+	-webkit-border-bottom-right-radius: 4px;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 	border-top: 1px solid #b8b8b8;
@@ -236,6 +244,8 @@ span.frame {
 
 .frame > ol > li:last-of-type,
 .frame > ul > li:last-of-type {
+	-webkit-border-bottom-left-radius: 4px;
+	-webkit-border-bottom-right-radius: 4px;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	border-bottom: 1px solid #b8b8b8;
@@ -376,6 +386,7 @@ span.frame {
 
 .frame > ol > li:last-of-type .content,
 .frame > ul > li:last-of-type .content {
+	-webkit-border-radius: 0 0 4px 4px;
 	border-radius: 0 0 4px 4px;
 }
 
@@ -602,6 +613,7 @@ span.frame {
 	box-sizing: border-box;
 	display: block;
 	color: #fff;
+	-webkit-border-radius: 4px;
 	border-radius: 4px;
 }
 
