--- a/symphony/assets/css/symphony.grids.css
+++ b/symphony/assets/css/symphony.grids.css
@@ -102,6 +102,7 @@ form.columns .column.primary {
 .columns > .invalid {
 	background: none;
 	border: none;
+	-webkit-border-radius: 0;
 	border-radius: 0;
 	-webkit-box-shadow: none;
 	box-shadow: none;
@@ -111,6 +112,7 @@ form.columns .column.primary {
 	background-color: #eb6347;
 	border: 1px solid #c31;
 	border-bottom: 0;
+	-webkit-border-radius: 4px 4px 0 0;
 	border-radius: 4px 4px 0 0;
 	padding: 10px 10px;
 	width: 100%;
@@ -122,6 +124,7 @@ form.columns .column.primary {
 	background-color: #eb6347;
 	border: 1px solid #c31;
 	border-top: 0;
+	-webkit-border-radius: 0 0 4px 4px;
 	border-radius: 0 0 4px 4px;
 	-webkit-box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
 	box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
