--- a/symphony/assets/css/symphony.notices.css
+++ b/symphony/assets/css/symphony.notices.css
@@ -134,6 +134,8 @@ div.notifier nav:hover:before {
 	background: #383838;
 	min-height: 23px;
 	width: 100%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
