Fixes for #1329, Drawer styling bugs

--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -8,7 +8,9 @@
 --------------------------------------------------------------------------*/
 
 #wrapper {
-	background: #F4F4F4;
+	background: #fff;
+	position: relative;
+	min-height: 100%;
 }
 
 /* Header */
@@ -192,6 +194,7 @@
 	padding: 25px 18px 0;
 	position: relative;
 	color: #000;
+	background-color: #f4f4f4;
 	min-height: 38px;
 	z-index: 1000;
 }
