--- a/symphony/assets/css/symphony.css
+++ b/symphony/assets/css/symphony.css
@@ -52,6 +52,11 @@ header, nav, section, aside, footer {
 	Basic styles
 -----------------------------------------------------------------------------*/
 
+html,
+body {
+	height: 100%;
+}
+
 body {
 	font: 68.75%/1.5 'Lucida Grande', Leelawadee, Tahoma, Verdana, sans-serif;
 	background: #fff;
