--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -267,6 +267,10 @@ span.frame {
 	color: #3d3d3d;
 	margin: 0 -10px;
 	padding: 8px 10px 7px;
+}
+
+.frame > ol > li header:not(:only-child),
+.frame > ul > li header:not(:only-child) {
 	-webkit-box-shadow: 0 3px 10px #ededed;
 	box-shadow: 0 3px 10px #ededed;
 	border-bottom: 1px solid #dcdcdc;
