(hopefully definitive) fix for #1095

--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -257,7 +257,7 @@
 
 #breadcrumbs a, #breadcrumbs span {
 	padding: 0;
-	font: 127.28% 'Lucida Grande', Leelawadee, Tahoma, Verdana, sans-serif;
+	font: 127.28%/1.35 'Lucida Grande', Leelawadee, Tahoma, Verdana, sans-serif;
 	color: rgba(0, 0, 0, 0.6);
 	text-shadow: 0 0 1px #fff;
 	float: left;
