--- a/symphony/assets/css/symphony.css
+++ b/symphony/assets/css/symphony.css
@@ -114,6 +114,7 @@ ul, ol {
 ul.tags {
 	margin: -0.75em 0 1.5em 0;
 	padding: 0;
+	color: #A2A2A2;
 	color: rgba(0, 0, 0, 0.4);
 	list-style: none;
 }
