Add readonly styles for form fields. Closes #1433

--- a/symphony/assets/css/symphony.forms.css
+++ b/symphony/assets/css/symphony.forms.css
@@ -176,9 +176,21 @@ button.selected,
 	text-shadow: -1px -1px 1px #fff;
 }
 
+textarea[disabled=disabled],
+textarea[disabled=disabled]:hover,
+textarea[disabled=disabled]:active,
+textarea[disabled=disabled]:focus,
+textarea[readonly=readonly],
+textarea[readonly=readonly]:hover,
+textarea[readonly=readonly]:active,
+textarea[readonly=readonly]:focus,
 input[type=submit][disabled=disabled]:hover,
 input[type=submit][disabled=disabled]:active,
 input[type=submit][disabled=disabled]:focus,
+input[readonly=readonly],
+input[readonly=readonly]:hover,
+input[readonly=readonly]:active,
+input[readonly=readonly]:focus,
 button[disabled=disabled],
 button[disabled=disabled]:hover,
 button[disabled=disabled]:active,
