Expose the retrieve password link at all times on the Symphony login page. Update error messages to reflect what exactly is happening. RE: #1432

--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -86,6 +86,11 @@ span.frame {
 	display: none;
 }
 
+#login .frame .action-link  {
+	margin-top: 3px;
+	float: left;
+}
+
 
 /*--------------------------------------------------------------------------
 	Error frames
