--- a/symphony/assets/css/symphony.forms.css
+++ b/symphony/assets/css/symphony.forms.css
@@ -374,3 +374,37 @@ fieldset .button {
 	margin-left: 0;
 	margin-right: 10px;
 }
+
+/*--------------------------------------------------------------------------
+	Dropdowns
+--------------------------------------------------------------------------*/
+
+ul.suggestions {
+	position: absolute;
+	top: 40px;
+	border-radius: 0 0 4px 4px;
+	border: 1px solid #c0c0c0;
+	border-top: none;
+	margin: 0;
+	width: 100%;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	box-shadow: 0 5px 12px rgba(0, 0, 0, 0.2);
+	z-index: 10000;
+	max-height: 240px;
+	overflow: auto;
+	-webkit-transition: max-height .25s ease-out;
+	-moz-transition: max-height .25s ease-out;
+	-ms-transition: max-height .25s ease-out;
+	-o-transition: max-height .25s ease-out;
+	transition: max-height .25s ease-out;
+	background: #fff;
+}
+
+ul.suggestions li {
+	height: 22px;
+	padding: 2px 3px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
