--- a/symphony/assets/css/symphony.forms.css
+++ b/symphony/assets/css/symphony.forms.css
@@ -208,7 +208,7 @@ button.create,
 	background-image:    -moz-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
 	background-image:     -ms-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
 	background-image:      -o-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
-	background-image:   linear-gradient(to bottom, #92c44d 0%, #92c44d) 30%, #78a737 100%);
+	background-image:   linear-gradient(to bottom, #92c44d 0%, #92c44d 30%, #78a737 100%);
 	border-color: rgba(50, 70, 23, 0.3);
 	border-bottom-color: rgba(50, 70, 23, 0.5);
 	color: rgba(255, 255, 255, 0.9);
